--- a/public/admin/styles/main.css
+++ b/public/admin/styles/main.css
@@ -922,7 +922,7 @@ img {
 .header__area {
   width: 100%;
   height: 240px;
-  background-image: url("../images/background/header-background.png");
+  background-image: url("../images/background/adminbg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -13788,7 +13788,7 @@ img {
 }
 
 .main-content__area.bg-img {
-  background-image: url("../../admin/images/bg2.jpg");
+  background-image: url("../images/background/adminbg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -13800,7 +13800,7 @@ img {
 
 .authentication__item {
     padding: 60px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(110px);
     border-radius: 40px;
 }
 
@@ -13815,8 +13815,7 @@ img {
 }
 
 .authentication__item__logo a img {
-  width: 147px;
-  height: 36px;
+  width: 140px;
 }
 
 .authentication__item__title h2 {
