--- a/public/frontend/assets/css/extra.css
+++ b/public/frontend/assets/css/extra.css
@@ -1675,12 +1675,12 @@ a.product-link {
     height: 110px !important;
 }
 
-
+/*
 .product-priview-slide .single-slide{
     width: 450px !important;
     height: 360px !important;
 }
-
+ */
 
 
 .product-single-area .product-single-left .product-slier-big-image .product-priview-slide .single-slide .slide-image {
