--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,11 +1,11 @@
 /*
 ------------- Table of content ----------------
 
-Template Name: Zairito Responsive  HTML5 Template
+Template Name: ASR Mart Responsive  HTML5 Template
 Template URI: http://zainiktheme.com
-Description: Zairito Responsive  HTML5 Template
+Description: ASR Mart Responsive  HTML5 Template
 Author: Gobinda Sarkar
-Author URI: http://zairito.com
+Author URI: http://ASR Mart.com
 Version: 1.0
 
 ---------------------- common content ----------
