--- a/public/frontend/assets/css/extra.css
+++ b/public/frontend/assets/css/extra.css
@@ -1724,7 +1724,7 @@ a.product-link {
 }
 
 .cz-countdown .cz-countdown-value, .cz-countdown-text {
-    color: #000 !important;
+    color: #fff !important;
 }
 
 .cz-countdown-days{
