--- a/public/frontend/assets/css/responsive.css
+++ b/public/frontend/assets/css/responsive.css
@@ -682,6 +682,12 @@ margin-bottom: 2rem;
     .zoom-container {
         width: 284px !important;
     }
+
+    .gapper {
+        margin-top: 3rem;
+    }
+
+    
     /* Home 2 Product */
 }
 
