--- a/public/frontend/assets/css/responsive.css
+++ b/public/frontend/assets/css/responsive.css
@@ -501,6 +501,10 @@ margin-bottom: 2rem;
     margin-bottom: 2rem;
 }
 
+.gapper {
+    margin-top: 3rem;
+}
+
 }
 
 @media (max-width: 450px) {
@@ -687,7 +691,7 @@ margin-bottom: 2rem;
         margin-top: 3rem;
     }
 
-    
+
     /* Home 2 Product */
 }
 
